addimg the payment stuff
